Added timeline, social component added to footer and edits to intro

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,8 +1,8 @@
 .section {
   padding: 60px 0;
 
-  &--blue {
-    background-color: $blue;
+  &--dark-blue {
+    background-color: $dark-blue;
   }
 
   &--cream {
