--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -29,11 +29,12 @@
     flex: 1 1 25%;
   }
 
+  text-align: center;
+
   &__title {
     font-weight: bold;
     font-size: 1.4rem;
     color: #eee;
     padding: 10px 0 0;
   }
-
 }
