Added two column layout and testimonials

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,9 +3,34 @@
 
   &--dark-blue {
     background-color: $dark-blue;
+    color: #eee
   }
 
   &--cream {
     background-color: $cream;
+  }
+
+  &--red {
+    background-color: $red;
+    color: #eee;
+  }
+
+  &--sand {
+    background-color: $sand;
+  }
+
+  &--blue {
+    background-color: $blue;
+    color: #eee;
+  }
+
+  &--dark-grey {
+    background-color: $dark-grey;
+    color: #eee;
+  }
+
+  &--heading {
+    @include h2;
+    text-align: center;
   }
 }
