--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@
 @import "./components/intro";
 @import "./components/skills";
 @import "./components/cards";
-
+@import "./components/testimonials";
 
 // Layout
 @import "./layout/header";
