Added cards styling on home page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "./base/typography";
 
 // Components
+@import "./components/btn";
 @import "./components/hero-home";
 @import "./components/intro";
 @import "./components/skills";
