--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,10 @@
 
 // Components
 @import "./components/btn";
+@import "./components/page-title";
 @import "./components/hero-home";
 @import "./components/intro";
+@import "./components/about";
 @import "./components/skills";
 @import "./components/cards";
 @import "./components/testimonials";
