--- a/src/styles/components/_btn.scss
+++ b/src/styles/components/_btn.scss
@@ -1,8 +1,19 @@
 .btn {
-  padding: 10px 5px;
-  border-radius: 4px;
+  padding: 15px;
+  border-radius: 25px;
 
-  &--outline {
-    border: 1px solid $red;
+  &__red {
+    background-color: $red;
+    color: #eee;
+    border: 3px solid $red;
+    transition: ease-in .3s;
+
+    &:hover,
+    &:active,
+    &:focus {
+      background-color: darken($red, 5%);
+      border: 3px solid darken($red, 5%);
+
+    }
   }
 }
