--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -23,6 +23,7 @@
   box-shadow: 0px 13px 25px #d2cdcd;
   transition: top .2s ease;
   top: 0;
+  display: block;
 
   &:hover:before {
     transition: background-color .8s;
@@ -49,7 +50,6 @@
     border-radius: 10px;
   }
 
-
   @include for-tablet-portrait-up {
     flex: 0 1 calc(49% - 1em);
   }
@@ -61,6 +61,11 @@
   &__img {
     width: 100%;
     height: auto;
+  }
+
+  &__text {
+    padding-top: 5px;
+    font-size: 1.1rem;
   }
 
   &__content {
