--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -8,7 +8,7 @@
   text-align: center;
   margin: auto;
   height: 70px;
-  background-color: $dark-blue;
+  background-color: $blue;
   padding: 0 20px;
 }
 
