Added companies I've worked with on about page and added projects title

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,8 @@
 @import "./components/skills";
 @import "./components/cards";
 @import "./components/testimonials";
+@import "./components/logo-row";
+
 
 // Layout
 @import "./layout/header";
