--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -2,8 +2,13 @@
   justify-content: space-between;
 
   &__img {
-    display: block;
-    flex: 1 1 25%;
+    display: none;
+
+    @include for-tablet-portrait-up {
+      display: block;
+    }
+
+    flex: 0 1 30%;
 
     img {
       width: 100%;
@@ -15,11 +20,12 @@
 
   &__heading {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    margin-bottom: .25rem;
   }
 
   &__text {
-    flex: 1 1 75%;
+    flex: 0 1 70%;
     font-size: 1.2rem;
     padding: 30px;
     background-color: $cream;
@@ -27,8 +33,10 @@
     align-content: center;
     justify-content: center;
     flex-direction: column;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
 
+    @include for-tablet-portrait-up {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
   }
 }
