Fixed logo reponsiveness on skills component

--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -1,11 +1,11 @@
 .skills {
   padding: 20px 0;
 
-  @include for-tablet-portrait-up {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
+  // @include for-tablet-portrait-up {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  // }
 
   &__heading {
     @include h2;
