--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -12,8 +12,8 @@
 
   &__quote-mark {
 
-    &:after,
-    &:before {
+    &::after,
+    &::before {
       font-weight: bold;
       font-style: italic;
       font-size: 1.8rem;
@@ -21,17 +21,20 @@
     }
   }
 
-  &__quote-mark--before:before {
+  &__quote-mark--before::before {
     vertical-align: super;
     content: '"';
-    top: -10px;
+    top: -7px;
     left: -18px;
     position: absolute;
   }
 
-  &__quote-mark--after:after {
-    vertical-align: sub;
+  &__quote-mark--after::after {
+    vertical-align: baseline;
     content: '"';
+    position: relative;
+    top: -0.3rem;
+
   }
 
   &__name {
