--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,26 +1,35 @@
 .intro {
-
-  &__heading {
-    @include h2;
-    color: $dark-blue;
-    padding: 5px;
-    margin-bottom: .25rem;
-  }
+  padding: 0 0 40px;
 
   &__content-text {
     margin-bottom: 1rem;
   }
 
-  @include for-tablet-landscape-up {
-    &__content {
-      display: flex;
-      justify-content: space-between;
+  &__content {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+
+    @include for-tablet-landscape-up {
+      margin-top: -10px;
+    }
+  }
+
+
+  &__content-text {
+    @include for-tablet-landscape-up {
+      flex-basis: 75%;
+      font-size: 1.2rem;
     }
 
-    &__content-text {
-      flex: 1 1 50%;
-      padding: 5px;
-      margin-bottom: 0;
+    @include for-desktop-up {
+      font-size: 1.2rem;
+      margin-top: -10px;
+
     }
+
+    padding: 5px;
+    text-align: center;
+    margin-bottom: 0;
   }
 }
