--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -1,6 +1,5 @@
 .testimonials {
   flex: 1 1 50%;
-  border: 4px solid #eee;
   padding: 15px 10px;
   border-radius: 2rem;
   margin: 2rem 1rem;
@@ -13,8 +12,8 @@
 
   &__quote-mark {
 
-    &:after,
-    &:before {
+    &::after,
+    &::before {
       font-weight: bold;
       font-style: italic;
       font-size: 1.8rem;
@@ -22,17 +21,20 @@
     }
   }
 
-  &__quote-mark--before:before {
+  &__quote-mark--before::before {
     vertical-align: super;
     content: '"';
-    top: -10px;
+    top: -7px;
     left: -18px;
     position: absolute;
   }
 
-  &__quote-mark--after:after {
-    vertical-align: sub;
+  &__quote-mark--after::after {
+    vertical-align: baseline;
     content: '"';
+    position: relative;
+    top: -0.3rem;
+
   }
 
   &__name {
