Added projects pages

--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -22,8 +22,8 @@
     display: flex;
   }
 
-  &--space-evenly {
-    justify-content: space-evenly;
+  &--space-betwwen {
+    justify-content: space-between;
 
   }
 
