Added react-slick-slider and images  on projects image gallery

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,9 @@
 @import "./abstacts/functions";
 @import "./abstacts/mixins";
 
+//Vendors 
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
+
 // Base
 @import "./base/base";
 @import "./base/reset";
