--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -2,19 +2,20 @@
   justify-content: space-between;
 
   &__img {
-    display: none;
 
-    @include for-tablet-portrait-up {
+
+    @include for-tablet-landscape-up {
       display: block;
     }
 
     flex: 0 1 30%;
 
     img {
+      max-width: 275px;
+      margin: 0 auto;
       width: 100%;
       display: block;
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
+      box-shadow: 1px 1px 7px #777;
     }
   }
 
@@ -28,13 +29,13 @@
     flex: 0 1 70%;
     font-size: 1.2rem;
     padding: 30px;
-    background-color: $cream;
     display: flex;
-    align-content: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 
-    @include for-tablet-portrait-up {
+    @include for-tablet-landscape-up {
+      text-align: left;
       border-top-right-radius: 10px;
       border-bottom-right-radius: 10px;
     }
