--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,8 @@
 @import "./components/cards";
 @import "./components/testimonials";
 @import "./components/logo-row";
+@import "./components/project-browse";
+
 
 
 // Layout
