--- a/src/styles/components/_project-browse.scss
+++ b/src/styles/components/_project-browse.scss
@@ -27,6 +27,12 @@
     transition: ease-out .4s;
   }
 
+  width: 350px;
+  height: 350px;
+  margin: 1rem auto;
+  flex: 0 0 45%;
+  display: flex;
+  background-color: $blue;
 
   &__content {
     width: 100%;
