--- a/src/styles/components/_project-browse.scss
+++ b/src/styles/components/_project-browse.scss
@@ -58,6 +58,25 @@
   flex: 0 0 45%;
   display: flex;
   background-color: $blue;
+  height: 350px;
+  margin: 1rem 0;
+
+  @include for-tablet-landscape-up {
+    width: 350px;
+    height: 350px;
+    margin: .5rem auto;
+  }
+
+  box-shadow: 1px 1px 3px #333;
+  transition: ease-out .4s;
+
+  &:hover,
+  &:active,
+  &:focus {
+    box-shadow: 1px 1px 13px #333;
+    transition: ease-out .4s;
+  }
+
 
   &__content {
     width: 100%;
