--- a/src/styles/components/_project-browse.scss
+++ b/src/styles/components/_project-browse.scss
@@ -4,12 +4,29 @@
   display: block;
   background-repeat: no-repeat;
   background-position: top;
-  width: 350px;
-  height: 350px;
-  margin: 1rem auto;
-  flex: 0 0 45%;
+  width: 100%;
+  flex: 0 0 48%;
   display: flex;
   background-color: $blue;
+  height: 350px;
+  margin: 1rem 0;
+
+  @include for-tablet-landscape-up {
+    width: 350px;
+    height: 350px;
+    margin: .5rem auto;
+  }
+
+  box-shadow: 1px 1px 3px #333;
+  transition: ease-out .4s;
+
+  &:hover,
+  &:active,
+  &:focus {
+    box-shadow: 1px 1px 13px #333;
+    transition: ease-out .4s;
+  }
+
 
   &__content {
     width: 100%;
@@ -39,9 +56,11 @@
 
   &__heading {
     @include h2;
+    font-size: 2.4rem;
   }
 
   &__cta {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    font-weight: bold;
   }
 }
