--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -22,9 +22,12 @@
     display: flex;
   }
 
-  &--space-betwwen {
+  &--space-between {
     justify-content: space-between;
+  }
 
+  &--space-around {
+    justify-content: space-around;
   }
 
   &--flex-wrap {
@@ -34,4 +37,8 @@
 
 .flex {
   display: flex;
+}
+
+.half {
+  flex: 0 0 50%;
 }
