Added contact form and react-slick-slider

--- a/src/styles/base/_helper.scss
+++ b/src/styles/base/_helper.scss
@@ -13,3 +13,24 @@
 .mt--2 {
   margin-top: 2rem;
 }
+
+.mb {
+  &--1 {
+    margin-bottom: 1rem;
+  }
+
+  &--2 {
+    margin-bottom: 2rem;
+  }
+}
+
+.mb--2 .sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
