--- a/src/styles/components/_project-info.scss
+++ b/src/styles/components/_project-info.scss
@@ -2,11 +2,6 @@
   padding: 20px;
   background-color: #f5f6fa;
 
-  &__title {
-    font-weight: bold;
-    font-size: 1.3rem;
-  }
-
   &__data {
     @include for-tablet-portrait-up {
       display: flex;
@@ -26,5 +21,28 @@
   &__data-title {
     flex: 1 1 auto;
     font-weight: bold;
+  }
+
+  &__text {
+    margin-top: 1rem;
+  }
+}
+
+.project-content {
+  &__title {
+    font-weight: bold;
+    font-size: 1.3rem;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+  }
+
+  &__list {
+    list-style-type: disc;
+    padding-left: 1.2rem;
+    margin-bottom: 1rem;
+  }
+
+  &__list-item {
+    margin-bottom: .3rem;
   }
 }
