--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -4,10 +4,9 @@
 }
 
 .contact-form {
-
   &__heading {
     @include h2;
-    font-size: 2.7rem;
+    font-size: 2.1rem;
     color: $dark-grey;
     margin-bottom: 1rem;
   }
@@ -19,12 +18,14 @@
     padding: 1.2rem;
     margin-bottom: .5rem;
     color: #333;
-    font-size: 1.3rem;
     border: 1px solid $cream;
+    font-size: 1rem;
 
     &--textarea {
       min-height: 160px;
       resize: none;
+      font-family: Rubik, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     }
   }
 }
