--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -8,7 +8,11 @@
     font-style: italic;
     font-size: 1.4rem;
     text-align: center;
-    padding: 0 65px;
+
+    @include for-tablet-portrait-up {
+      padding: 0 65px;
+    }
+
     position: relative;
   }
 
