Added Contact details to contact form

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@
 @import "./components/project-info";
 @import "./components/callout";
 @import "./components/contact-form";
+@import "./components/contact-details";
 
 // Layout
 @import "./layout/header";
