--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -1,9 +1,7 @@
-.contact {
-  padding: 3rem 2rem;
-  background-color: #f5f5f5;
-}
-
 .contact-form {
+  padding: 2rem;
+  background-color: #f5f5f5;
+
   &__heading {
     @include h2;
     font-size: 2.1rem;
