Added social icons for contact details

--- a/src/styles/components/_contact-details.scss
+++ b/src/styles/components/_contact-details.scss
@@ -9,11 +9,27 @@
 
   &__subheading {
     font-weight: bold;
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
   }
 
   &__item {
-    margin-bottom: 1.2rem;
-    ;
+    margin-bottom: 2.2rem;
+  }
+
+  &__list-item {
+    display: inline-block;
+    margin: 0 .5rem;
+  }
+
+  &__details {
+    font-size: 1.1rem;
+  }
+
+  &__icon {
+    background-color: $red;
+    width: 70px;
+    padding: 16px;
   }
 
 }
