--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,5 +1,5 @@
 .intro {
-  padding: 0 0 40px;
+  padding: 40px 0;
 
   &__content-text {
     margin-bottom: 1rem;
@@ -8,15 +8,12 @@
   &__content {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
-
-    @include for-tablet-landscape-up {
-      margin-top: -10px;
-    }
   }
 
-
   &__content-text {
+    text-align: center;
+    margin-bottom: 0;
+
     @include for-tablet-landscape-up {
       flex-basis: 75%;
       font-size: 1.2rem;
@@ -24,12 +21,6 @@
 
     @include for-desktop-up {
       font-size: 1.2rem;
-      margin-top: -10px;
-
     }
-
-    padding: 5px;
-    text-align: center;
-    margin-bottom: 0;
   }
 }
