--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,8 @@
 @import "./components/callout";
 @import "./components/contact-form";
 @import "./components/contact-details";
+@import "./components/social";
+
 
 // Layout
 @import "./layout/header";
