Added third quote, removed outline on testimonials and changes colors of buttons on carousel to white

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -63,3 +63,16 @@ fieldset {
   padding: 0;
   margin: 0;
 }
+
+// For Slick Slider
+.section--dark-grey .slick-dots li.slick-active button:before {
+  color: #fff;
+}
+
+.section--dark-grey .slick-dots li button:before {
+  color: $cream;
+}
+
+.slick-slide div:focus {
+  outline: none;
+}
