--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -9,6 +9,10 @@
     font-size: 1.4rem;
     text-align: center;
 
+    &:focus {
+      outline: none;
+    }
+
     @include for-tablet-portrait-up {
       padding: 0 65px;
     }
