--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,10 +5,11 @@
 
 //Vendors
 @import "~react-image-gallery/styles/scss/image-gallery.scss";
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 
 // Base
 @import "./base/base";
-@import "./base/reset";
 @import "./base/typography";
 
 // Components
@@ -39,3 +40,4 @@
 
 // Helper
 @import "./base/helper";
+@import "./base/reset";
