--- a/src/styles/components/_logo-row.scss
+++ b/src/styles/components/_logo-row.scss
@@ -2,9 +2,11 @@
   align-items: center;
   text-align: center;
   margin-top: 2rem;
-
+  flex-wrap: wrap;
+  justify-content: center;
+  
   &__item {
-    flex: 1 1 25%;
+    flex: 0 0 30%;
     margin: 1rem 0;
   }
 
